--- a/MPfm/MPfm.iOS/XIB/iPhone/MobileLibraryBrowserViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/MobileLibraryBrowserViewController_iPhone.xib
@@ -12,9 +12,10 @@
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
+			<string>IBUICollectionView</string>
+			<string>IBUICollectionViewFlowLayout</string>
 			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
-			<string>IBUIScrollView</string>
 			<string>IBUITableView</string>
 			<string>IBUIView</string>
 		</array>
@@ -44,6 +45,7 @@
 						<string key="NSFrame">{{0, 75}, {320, 385}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="97836776">
 							<int key="NSColorSpace">3</int>
@@ -58,18 +60,6 @@
 						<float key="IBUIRowHeight">44</float>
 						<float key="IBUISectionHeaderHeight">22</float>
 						<float key="IBUISectionFooterHeight">22</float>
-					</object>
-					<object class="IBUIScrollView" id="104753175">
-						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">-2147483380</int>
-						<string key="NSFrameSize">{320, 460}</string>
-						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="877569748"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<bool key="IBUIMultipleTouchEnabled">YES</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 					<object class="IBUIView" id="877569748">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -90,7 +80,7 @@
 							<object class="IBUILabel" id="723437543">
 								<reference key="NSNextResponder" ref="877569748"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{82, 1}, {194, 24}}</string>
+								<string key="NSFrame">{{82, 2}, {194, 24}}</string>
 								<reference key="NSSuperview" ref="877569748"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="850507316"/>
@@ -120,7 +110,7 @@
 							<object class="IBUILabel" id="850507316">
 								<reference key="NSNextResponder" ref="877569748"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{82, 18}, {194, 24}}</string>
+								<string key="NSFrame">{{82, 19}, {194, 24}}</string>
 								<reference key="NSSuperview" ref="877569748"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="400228597"/>
@@ -153,7 +143,7 @@
 							<object class="IBUILabel" id="400228597">
 								<reference key="NSNextResponder" ref="877569748"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{82, 38}, {194, 20}}</string>
+								<string key="NSFrame">{{82, 37}, {194, 20}}</string>
 								<reference key="NSSuperview" ref="877569748"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="236045359"/>
@@ -186,10 +176,10 @@
 							<object class="IBUILabel" id="236045359">
 								<reference key="NSNextResponder" ref="877569748"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{82, 52}, {194, 20}}</string>
+								<string key="NSFrame">{{82, 51}, {194, 20}}</string>
 								<reference key="NSSuperview" ref="877569748"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="897877131"/>
+								<reference key="NSNextKeyView" ref="618536724"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -216,11 +206,36 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
+					<object class="IBUICollectionView" id="618536724">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">1298</int>
+						<array class="NSMutableArray" key="NSSubviews"/>
+						<object class="NSPSMatrix" key="NSFrameMatrix"/>
+						<string key="NSFrameSize">{320, 460}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="897877131"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<float key="IBUIAlpha">0.0</float>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<float key="IBUIMinimumZoomScale">0.0</float>
+						<float key="IBUIMaximumZoomScale">0.0</float>
+						<object class="IBUICollectionViewFlowLayout" key="IBUICollectionViewLayout" id="481538466">
+							<reference key="IBUICollectionView" ref="618536724"/>
+							<string key="IBUIItemSize">{50, 50}</string>
+							<float key="IBUIMinimumLineSpacing">10</float>
+							<float key="IBUIMinimumInteritemSpacing">10</float>
+						</object>
+						<array key="IBUICells" id="0"/>
+					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="104753175"/>
+				<reference key="NSNextKeyView" ref="877569748"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -300,18 +315,18 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">scrollView</string>
+						<string key="label">collectionView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="104753175"/>
+						<reference key="destination" ref="618536724"/>
 					</object>
-					<int key="connectionID">19</int>
+					<int key="connectionID">22</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
 					<object class="IBObjectRecord">
 						<int key="objectID">0</int>
-						<array key="object" id="0"/>
+						<reference key="object" ref="0"/>
 						<reference key="children" ref="1000"/>
 						<nil key="parent"/>
 					</object>
@@ -321,7 +336,7 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="897877131"/>
 							<reference ref="877569748"/>
-							<reference ref="104753175"/>
+							<reference ref="618536724"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -379,9 +394,17 @@
 						<reference key="parent" ref="877569748"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">18</int>
-						<reference key="object" ref="104753175"/>
+						<int key="objectID">20</int>
+						<reference key="object" ref="618536724"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="481538466"/>
+						</array>
 						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">21</int>
+						<reference key="object" ref="481538466"/>
+						<reference key="parent" ref="618536724"/>
 					</object>
 				</array>
 			</object>
@@ -393,7 +416,8 @@
 				<string key="1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -404,7 +428,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">19</int>
+			<int key="maxID">22</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -412,16 +436,20 @@
 					<string key="className">MobileLibraryBrowserViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="collectionView">UICollectionView</string>
 						<string key="imageViewAlbumCover">UIImageView</string>
 						<string key="lblAlbumTitle">UILabel</string>
 						<string key="lblArtistName">UILabel</string>
 						<string key="lblSubtitle1">UILabel</string>
 						<string key="lblSubtitle2">UILabel</string>
-						<string key="scrollView">UIScrollView</string>
 						<string key="tableView">UITableView</string>
 						<string key="viewAlbumCover">UIView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="collectionView">
+							<string key="name">collectionView</string>
+							<string key="candidateClassName">UICollectionView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="imageViewAlbumCover">
 							<string key="name">imageViewAlbumCover</string>
 							<string key="candidateClassName">UIImageView</string>
@@ -442,10 +470,6 @@
 							<string key="name">lblSubtitle2</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="scrollView">
-							<string key="name">scrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
 						<object class="IBToOneOutletInfo" key="tableView">
 							<string key="name">tableView</string>
 							<string key="candidateClassName">UITableView</string>
@@ -458,6 +482,22 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/MobileLibraryBrowserViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UICollectionViewFlowLayout</string>
+					<string key="superclassName">UICollectionViewLayout</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UICollectionViewFlowLayout.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UICollectionViewLayout</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UICollectionViewLayout.h</string>
 					</object>
 				</object>
 			</array>
